# Mariana

./: .gitignore  LICENSE  README.md
mariana/: .gitignore  CMakeLists.txt  build_rk.sh  config.h.in  config.hpp.in  version.h.in  version.hpp.in
mariana/api/: CMakeLists.txt  mariana_api.cpp  mariana_api.h  typemeta.h
mariana/api/proto/: mariana.proto
mariana/api/util/: CMakeLists.txt  io.cpp  io.h  session_impl.cpp  session_impl.h
mariana/app/: .#app.cpp  CMakeLists.txt  app.cpp
mariana/cmake/: abseil.cmake  cuda.cmake  cudnn.cmake  git.cmake  glog.cmake  instruction.cmake  protobuf.cmake  summary.cmake  tensorRT.cmake
mariana/core/: CMakeLists.txt  alignment.h  allocator.cpp  allocator.h  cpu_allocator.cpp  cpu_allocator.h  device.cpp  device.h  device_type.cpp  device_type.h  layout.h  storage.cpp  storage.h  storage_impl.cpp  storage_impl.h  tensor.cpp  tensor.h  tensor_imp.cpp  tensor_imp.h  tensor_impl.cpp  tensor_impl.h  tensor_options.cpp  tensor_options.h
mariana/core/cuda/: CMakeLists.txt  alloc_cuda.cpp  alloc_cuda.h  cuda_allocator.cpp  cuda_allocator.h  device_attr.cpp  device_attr.h  helper_cuda.h  helper_string.h
mariana/core/impl/: CMakeLists.txt  alloc_cpu.cpp  alloc_cpu.h  shape.cpp  shape.h  stride.cpp  stride.h  thread_pool.cpp  thread_pool.h  type.h
mariana/core/macros/: export.h  macros.h
mariana/core/utils/: CMakeLists.txt  arrary_ref.h  logging.cpp  logging.h  status.h  sys.cpp  sys.h  typemeta.cpp  typemeta.h
mariana/marc/: CMakeLists.txt  marc.cpp  marc.h
mariana/marc/onnx/: CMakeLists.txt  onnx.cpp  onnx.h  ops.cpp  ops.h  register.cpp  register.h
mariana/marc/onnx/ops/: CMakeLists.txt  act.cpp  add.cpp  concat.cpp  conv.cpp  default.cpp  flatten.cpp  gemm.cpp  math.cpp  maxpool.cpp  mul.cpp  pool.cpp  pow.cpp  reduce.cpp  relu.cpp  reshape.cpp  resize.cpp  sigmoid.cpp  slice.cpp  softmax.cpp  split.cpp  transpose.cpp
mariana/marc/onnx/optimize/: CMakeLists.txt  fold_identity.cpp  transform.cpp  transform.h  transform_utils.cpp  transform_utils.h
mariana/marc/onnx/proto/: onnx_help.cc  onnx_help.h
mariana/maro/: CMakeLists.txt  transform.cpp  transform.h  transform_utils.cpp  transform_utils.h
mariana/maro/base/: CMakeLists.txt  fold_act_to_node.cpp  fold_reshape_to_node.cpp
mariana/maro/trt/: CMakeLists.txt  trt_softmax_io_reshape.cpp  trt_split_to_slice.cpp
mariana/sample/: CMakeLists.txt  app.cpp  yolov8.cpp
mariana/sample/deepsort/: CMakeLists.txt  README.md
mariana/sample/deepsort/include/: datatype.h  deepsort.h  detect.h  featuretensor.h
mariana/sample/deepsort/src/: deepsort.cpp  detect.cpp  featuretensor.cpp  main.cpp
mariana/sample/yolov8/: yolov8.cpp
mariana/structure/: CMakeLists.txt  edge.cpp  edge.h  engine.h  fetch.cpp  fetch.h  func_option.cpp  func_option.h  function.cpp  function.h  graph_exec.cpp  graph_exec.h  ir.cpp  ir.h  ir_builder.h  node.cpp  node.h  processor.h  tensor.cpp  tensor.h
mariana/structure/funcs/: CMakeLists.txt  activation.cpp  activation.h  add.cpp  add.h  concat.cpp  concat.h  conv.cpp  conv.h  flatten.cpp  flatten.h  gemm.cpp  gemm.h  math.cpp  math.h  ops.h  permute.cpp  permute.h  pool.cpp  pool.h  reduce.cpp  reduce.h  register.cpp  register.h  relu.cpp  relu.h  reshape.cpp  reshape.h  resize.cpp  resize.h  slice.cpp  slice.h  softmax.cpp  softmax.h  split.cpp  split.h
mariana/structure/funcs/cpu/: CMakeLists.txt
mariana/structure/funcs/rknn/: CMakeLists.txt  rknn_executor.cpp  rknn_executor.h
mariana/structure/funcs/tensorRT/: CMakeLists.txt  trt_executor.cpp  trt_executor.h  trt_helper.cpp  trt_helper.h
mariana/structure/funcs/tensorRT/ops/: CMakeLists.txt  trt_act.cpp  trt_concat.cpp  trt_conv.cpp  trt_eltwise.cpp  trt_fc.cpp  trt_pool.cpp  trt_reduce.cpp  trt_reshape.cpp  trt_resize.cpp  trt_slice.cpp  trt_softmax.cpp  trt_transpose.cpp
mariana/structure/processors/: CMakeLists.txt  register.cpp  register.h  yolov8_post.cpp  yolov8_post.h
