include(${CMAKE_CURRENT_LIST_DIR}/util/CMakeLists.txt)

file(GLOB_RECURSE PROTO_FILE_LIST_TMP ${CMAKE_CURRENT_LIST_DIR}/proto/*.proto)
foreach(FILE_TMP ${PROTO_FILE_LIST_TMP})
  file(RELATIVE_PATH FILE_RES ${PROJECT_SOURCE_DIR} ${FILE_TMP})
  execute_process(COMMAND ${PROTOBUF_BIN_DIR}/protoc --proto_path=./ --cpp_out=./ ${FILE_RES}
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
endforeach()

file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/proto/*.cc)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h ${CMAKE_CURRENT_LIST_DIR}/proto/*.h)

set(LIB_NAME mariana_api)
add_library(${LIB_NAME} OBJECT ${CURRENT_SOURCE_PATH})
target_sources(${LIB_NAME} PRIVATE ${CURRENT_SOURCE_PATH} PUBLIC ${CURRENT_HEAD_PATH})
add_dependencies(${LIB_NAME} abseil-cpp glog protobuf)
list(APPEND MARIANA_CORE_OBJECTS $<TARGET_OBJECTS:${LIB_NAME}>)
file(GLOB INSTALL_HEADERS ${CMAKE_CURRENT_LIST_DIR}/*.h)
