add_executable(app)
file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)
target_sources(app PRIVATE ${CURRENT_SOURCE_PATH} PUBLIC ${CURRENT_HEAD_PATH})
target_link_libraries(app -Wl,-whole-archive mariana_core-static mariana_marc-static -Wl,-no-whole-archive)
#target_link_libraries(app mariana_core)
