# include(${CMAKE_CURRENT_LIST_DIR}/utils/CMakeLists.txt)
 #${MARIANA_CORE_OBJECTS}
set(LIB_NAME mariana_core)
add_library(${LIB_NAME} "")
file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)
target_sources(${LIB_NAME}
  PRIVATE ${CURRENT_SOURCE_PATH}
  PUBLIC ${CURRENT_HEAD_PATH})
target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
