include(${CMAKE_CURRENT_LIST_DIR}/utils/CMakeLists.txt)
include(${CMAKE_CURRENT_LIST_DIR}/impl/CMakeLists.txt)

set(LIB_NAME mariana_core)
add_library(${LIB_NAME} "")
file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)
target_sources(${LIB_NAME} PRIVATE ${CURRENT_SOURCE_PATH} ${MARIANA_CORE_OBJECTS} PUBLIC ${CURRENT_HEAD_PATH})
add_dependencies(${LIB_NAME} abseil-cpp glog)
target_link_libraries(${LIB_NAME} -lglog -labsl -lpthread)
