cmake_minimum_required(VERSION 3.20.0)
project(App)
set(THIRED_PARTY_DIR ${CMAKE_SOURCE_DIR}/3rd_party)
link_directories(${THIRED_PARTY_DIR}/Mariana/lib)
include_directories(${THIRED_PARTY_DIR}/Mariana/include)

set(OpenCV_DIR  ${THIRED_PARTY_DIR}/opencv/lib/cmake/opencv4)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -g -O0 -std=c++11 -lrt -mavx -ldl -ffast-math")
set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -g -O0 -std=c++11 -lrt -mavx -ldl -ffast-math")
add_executable(app)
file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)
target_sources(app PRIVATE ${CURRENT_SOURCE_PATH} PUBLIC ${CURRENT_HEAD_PATH})
target_link_libraries(app -Wl,-whole-archive -lmariana -Wl,-no-whole-archive -lpthread ${OpenCV_LIBS})
