include(${CMAKE_CURRENT_LIST_DIR}/funcs/CMakeLists.txt)
file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)

set(LIB_NAME mariana_structure)
add_library(${LIB_NAME} OBJECT ${CURRENT_SOURCE_PATH})
target_sources(${LIB_NAME} PRIVATE ${CURRENT_SOURCE_PATH} ${MARIANA_CORE_OBJECTS} PUBLIC ${CURRENT_HEAD_PATH})
add_dependencies(${LIB_NAME} abseil-cpp glog)
list(APPEND MARIANA_STRUCTURE_OBJECTS $<TARGET_OBJECTS:${LIB_NAME}>)
