file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)

set(LIB_NAME mariana_core_utils)
add_library(${LIB_NAME} OBJECT ${CURRENT_SOURCE_PATH})
target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
list(APPEND MARIANA_CORE_OBJECTS $<TARGET_OBJECTS:${LIB_NAME}>)
