file(GLOB_RECURSE PROTO_FILE_LIST_TMP ${CMAKE_CURRENT_LIST_DIR}/proto/*.proto)
foreach(FILE_TMP ${PROTO_FILE_LIST_TMP})
  file(RELATIVE_PATH FILE_RES ${PROJECT_SOURCE_DIR} ${FILE_TMP})
  execute_process(COMMAND ${PROTOBUF_BIN_DIR}/protoc --proto_path=./ --cpp_out=./ ${FILE_RES}
    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
endforeach()

file(GLOB CURRENT_SOURCE_PATH ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
file(GLOB CURRENT_HEAD_PATH ${CMAKE_CURRENT_LIST_DIR}/*.h)

set(LIB_NAME mariana_marc_onnx)
add_library(${LIB_NAME} OBJECT ${CURRENT_SOURCE_PATH})
list(APPEND MARIANA_MARC_OBJECTS $<TARGET_OBJECTS:${LIB_NAME}>)
